--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,5 +3,7 @@ on: [push]
 
 jobs:
   test:
-    name: see if works
-    run: pip3 install github3.py jwt requests cryptography
+    runs-on: ubuntu-latest
+    steps:
+    - name: see if works
+      run: pip3 install github3.py jwt requests cryptography
