--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,5 +7,5 @@ jobs:
     steps:
     - name: see if works
       run: | 
-       apt install python3-pip
+       sudo apt install python3-pip
        pip3 install github3.py jwt requests cryptography
