--- a/.github/workflows/reop-dispatch.yaml
+++ b/.github/workflows/reop-dispatch.yaml
@@ -23,7 +23,7 @@ jobs:
         PROJECT_NAME: ${{ format('{0}/{1}', secrets.WANDB_ENTITY, secrets.WANDB_PROJECT) }}
         FILTER_GITHUB_SHA: "0c8524ebb794c907446fc97a5fd18f5e4837e242"
         BASELINE_TAGS: "['baseline', 'reference']"
-        DISPLAY_METRICS: "['accuracy', 'loss', 'val_accuracy', 'val_loss']"
+        DISPLAY_METRICS: "['accuracy', 'loss', 'val_accuracy', 'val_loss', '_runtime']"
         WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
         DEBUG: 'true'
 
