--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -18,35 +18,35 @@ jobs:
       env:
         TRIGGER_LABEL_NAME: "Full Test Pending"
       
-    # - name: Publish CPU Image to DockerHub
-    #   if: steps.label.outputs.TRIGGERED == 'true'
-    #   run: |
-    #     cd $GITHUB_WORKSPACE
-    #     echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
-    #     BASE_NAME="$USERNAME/ml-cicd"
-    #     IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
-    #     docker pull $BASE_NAME || true
-    #     docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
-    #     docker push $IMAGE_NAME
-    #     docker push $BASE_NAME
-    #   env:
-    #     USERNAME: ${{ secrets.DOCKER_USERNAME }}
-    #     PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Publish CPU Image to DockerHub
+      if: steps.label.outputs.TRIGGERED == 'true'
+      run: |
+        cd $GITHUB_WORKSPACE
+        echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
+        BASE_NAME="$USERNAME/ml-cicd"
+        IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
+        docker pull $BASE_NAME || true
+        docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
+        docker push $IMAGE_NAME
+        docker push $BASE_NAME
+      env:
+        USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
-    # - name: Publish GPU Image to DockerHub
-    #   if: steps.label.outputs.TRIGGERED == 'true'
-    #   run: |
-    #     cd $GITHUB_WORKSPACE
-    #     echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
-    #     BASE_NAME="$USERNAME/ml-cicd-gpu"
-    #     IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
-    #     docker pull $BASE_NAME || true
-    #     docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
-    #     docker push $IMAGE_NAME
-    #     docker push $BASE_NAME
-    #   env:
-    #     USERNAME: ${{ secrets.DOCKER_USERNAME }}
-    #     PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Publish GPU Image to DockerHub
+      if: steps.label.outputs.TRIGGERED == 'true'
+      run: |
+        cd $GITHUB_WORKSPACE
+        echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
+        BASE_NAME="$USERNAME/ml-cicd-gpu"
+        IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
+        docker pull $BASE_NAME || true
+        docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
+        docker push $IMAGE_NAME
+        docker push $BASE_NAME
+      env:
+        USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Argo Param File
       if: steps.label.outputs.TRIGGERED == 'true'
