--- a/.github/workflows/see_token.yaml
+++ b/.github/workflows/see_token.yaml
@@ -1,5 +1,5 @@
 name: Get token for prototyping
-on: [gollum]
+on: push
 
 jobs:
   test:
@@ -7,11 +7,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: change env
-      run: echo "GITHUB_SHA - $GITHUB_SHA"
-      env:
-        GITHUB_SHA: "hamel"
-
     - name: Write token
       run: | 
         echo $GITHUB_TOKEN > tok.txt
