--- a/.github/workflows/reop-dispatch.yaml
+++ b/.github/workflows/reop-dispatch.yaml
@@ -21,7 +21,7 @@ jobs:
       id: wandb
       with:
         PROJECT_NAME: ${{ format('{0}/{1}', secrets.WANDB_ENTITY, secrets.WANDB_PROJECT) }}
-        FILTER_GITHUB_SHA: "0c8524ebb794c907446fc97a5fd18f5e4837e242"
+        FILTER_GITHUB_SHA: ${{ steps.rd.outputs.SHA }}
         BASELINE_TAGS: "['baseline', 'reference']"
         DISPLAY_METRICS: "['accuracy', 'loss', 'val_accuracy', 'val_loss', '_runtime']"
         WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
