--- a/.github/workflows/chatops.yaml
+++ b/.github/workflows/chatops.yaml
@@ -3,6 +3,7 @@ on: [issue_comment]
 
 jobs:
   label-pr:
+    if: github.event.issue.pull_request != null
     runs-on: ubuntu-latest
     steps:
       - uses: machine-learning-apps/actions-chatops@master
