--- a/.github/workflows/chatops.yaml
+++ b/.github/workflows/chatops.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: create deployment
         if: steps.wandb.outputs.BOOL_SINGLE_RUN
         run: |
-          curl -d "{\"ref\": \"$BRANCH_NAME\", \"payload\": {\"run_id\": \"$RUN_ID\"}}" -H "Authorization: token $TOKEN" https://api.github.com/repos/$GITHUB_REPOSITORY/deployments
+          curl -d "{\"ref\": \"$BRANCH_NAME\", \"payload\": {\"wandb_run_id\": \"$RUN_ID\"}}" -H "Authorization: token $TOKEN" https://api.github.com/repos/$GITHUB_REPOSITORY/deployments
         env:
           RUN_ID: ${{ steps.deploy_chatops.outputs.TRAILING_TOKEN }}
           BRANCH_NAME: ${{ steps.deploy_chatops.outputs.BRANCH_NAME }}
