--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+
+    - name: see actor
+      run: echo $ACTOR
+      env:
+        ACTOR: ${{ github.actor }}
+        
     - uses: exelban/gcloud@master
       env:
         PROJECT_ID: ${{ secrets.GOOGLE_PROJECT_ID }}
