--- a/argo/workflow.yaml
+++ b/argo/workflow.yaml
@@ -133,4 +133,18 @@ spec:
       image: python:alpine3.6
       command: [python]
       source: |
-        print('Fail!')
+        import os, requests
+        sha = os.getenv('GITHUB_SHA')
+        owner, repo = os.getenv('REPO').split("/")
+        pr_num = os.getenv('PR_NUMBER')
+        personal_access_token = os.getenv('PAT')
+        # build the request
+        url = f'https://api.github.com/repos/{owner}/{repo}/dispatches'
+        headers = {'authorization': f'token {personal_access_token}',
+                   'accept': 'application/vnd.github.everest-preview+json'}
+        payload = {'sha': sha, 'pr_num': pr_num, 'conclusion': 'failure'}
+        # stuff a payload into the event_type string
+        data = {'event_type': f'{payload}'}
+        response = requests.post(url=url, headers=headers, json=data)
+        assert response.status_code == 204
+        print(response)
