correct repo dispatch

--- a/repo-dispatch.yaml
+++ b/repo-dispatch.yaml
@@ -19,6 +19,7 @@ jobs:
       
     - name: Get Runs Using SHA
       uses: machine-learning-apps/wandb-action@master
+      if: steps.rd.outputs.CONCLUSION == 'success'
       id: wandb
       with:
         PROJECT_NAME: ${{ format('{0}/{1}', secrets.WANDB_ENTITY, secrets.WANDB_PROJECT) }}
