--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -9,7 +9,12 @@ source "https://rubygems.org"
 # Happy Jekylling!
 # gem "jekyll", "~> 3.8.5"
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
-gem "just-the-docs"
+
+gem 'jekyll-remote-theme'
+gem 'just-the-docs'
+gem 'jekyll-octicons'
+gem 'jekyll-relative-links'
+
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
 gem "github-pages", group: :jekyll_plugins
