--- a/.github/workflows/nb2docs.yaml
+++ b/.github/workflows/nb2docs.yaml
@@ -35,6 +35,6 @@ jobs:
         git config --global user.name $GITHUB_ACTOR
         git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
         git pull github ${GITHUB_REF} --ff-only
-        git add _posts
+        git add docs/reports
         git commit -m "Update Jupyter Blog Posts" --allow-empty
         git push github HEAD:${GITHUB_REF}
