--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -24,36 +24,13 @@ jobs:
     - name: move and modify files
       run: |
         chmod -R 777 docs/docs
-        echo "---
-layout: default
-title: Summary
-nav_order: 2
----
-
-<center><p class=label label-red style=opacity: 0.6
--bash: >Mockup / Illustrative</p></center>
-
-1. TOC
-{:toc}" > project/temp.md && for f in project/temp.md project/model_card.md; do cat "$f"; echo " "; done > project/output.md && mv project/output.md docs/docs/model_card.md
-        echo "---
-layout: default
-title: Data Dictionary
-nav_order: 3
----
-
-<center><p class=label label-red style=opacity: 0.6
--bash: >Mockup / Illustrative</p></center>
-
-1. TOC
-{:toc}" > project/temp.md && for f in project/temp.md project/data_dictionary.md; do cat "$f"; echo " "; done > project/output.md && mv project/output.md docs/docs/data_dictionary.md     
-        cp project/model_events.csv docs/_data/model_events.csv
-
+        ./action_files/copy_files.sh
 
     - name: commit & push files
       run: |
         git config --global user.name $GITHUB_ACTOR
         git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
         git pull github ${GITHUB_REF} --ff-only
-        git add _posts
+        git add docs/model_card docs/model_timeline docs/data_dictionary
         git commit -m "Update Jupyter Blog Posts" --allow-empty
         git push github HEAD:${GITHUB_REF}
