--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -27,10 +27,4 @@ jobs:
         ./action_files/copy_files.sh
 
     - name: commit & push files
-      run: |
-        git config --global user.name $GITHUB_ACTOR
-        git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
-        git pull github ${GITHUB_REF} --ff-only
-        git add docs/model_card docs/model_timeline docs/data_dictionary
-        git commit -m "Update Jupyter Blog Posts" --allow-empty
-        git push github HEAD:${GITHUB_REF}
+      run: ./action_files/push_to_repo.sh
