--- a/.github/workflows/nb2docs.yaml
+++ b/.github/workflows/nb2docs.yaml
@@ -31,5 +31,5 @@ jobs:
         python action_files/nb2docs.py
 
     - name: commit & push files
-      run: ./action_files/push_to_repo.sh
+      run: ./action_files/push_to_repo.sh docs/docs/reports
 
