--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -27,4 +27,4 @@ jobs:
         ./action_files/copy_files.sh
 
     - name: commit & push files
-      run: ./action_files/push_to_repo.sh
+      run: ./action_files/push_to_repo.sh docs/model_card docs/model_timeline docs/data_dictionary
