--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -31,8 +31,9 @@ jobs:
 
       - name: Jekyll build
         uses: docker://jekyll/jekyll
-        with:  
-          args: jekyll build -s ./docs -d ./docs/_site --trace
+        with:
+          volumes: /home/runner/work/actions-ml-cicd/actions-ml-cicd/docs:/***/workspace  
+          args: jekyll build --trace
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.0.2
