--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -29,8 +29,7 @@ jobs:
       - name: Jekyll build
         uses: docker://jekyll/jekyll
         with:
-          volumes: /home/runner/work/actions-ml-cicd/actions-ml-cicd/docs:/***/workspace  
-          args: jekyll build --trace
+          args: jekyll build -d ${PWD}/docs/_site -s ${PWD}/docs --config ${PWD}/docs/_config.yml
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.0.2
