--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Jekyll build
         uses: docker://jekyll/jekyll
         with:
-          args: jekyll build -d ${PWD}/docs/_site -s ${PWD}/docs --config ${PWD}/docs/_config.yml
+          args: jekyll build -d ./docs/_site -s ./docs --config ./docs/_config.yml
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.0.2
