--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Jekyll build
         uses: docker://jekyll/jekyll
         with:
-          args: jekyll build -d ./docs/_site -s ./docs --config ./docs/_config.yml
+          args: jekyll build -d ./docs/_site -s ./docs --config ./docs/_config.yml --layouts ./docs/_layouts --trace
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.0.2
