--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      
+
       - name: Copy Repository Contents
         run: |
           chmod -R 777 docs/docs
@@ -25,15 +25,13 @@ jobs:
           cd docs
           rm -rf _site
           sudo chmod -R 777 .
-          
+
 #       - name: Setup tmate session
 #         uses: mxschmitt/action-tmate@v1
 
       - name: Jekyll build
-        uses: docker://jekyll/jekyll
-        with:
-          volumes: /home/runner/work/actions-ml-cicd/actions-ml-cicd/docs:/***/workspace
-          args: jekyll build
+        run: |
+            docker run -it -v $(PWD)/docs:/workspace -w /workspace jekyll/jekyll jekyll build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.0.2
